@@ -15,13 +15,12 @@
 
 package controllers;
 
-import akka.actor.ActorSystem;
 import be.objectify.deadbolt.java.actions.Group;
 import be.objectify.deadbolt.java.actions.Restrict;
 import com.fasterxml.jackson.databind.JsonNode;
 import controllers.base.BaseController;
 import impl.EmailComposer;
-import io.ebean.Ebean;
+import io.ebean.DB;
 import io.ebean.ExpressionList;
 import io.ebean.FetchConfig;
 import io.ebean.Query;
@@ -73,11 +72,13 @@ import org.apache.commons.compress.archivers.ArchiveOutputStream;
 import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
 import org.apache.commons.compress.archivers.tar.TarArchiveOutputStream;
 import org.apache.commons.compress.utils.IOUtils;
+import org.apache.pekko.actor.ActorSystem;
 import org.joda.time.DateTime;
 import org.joda.time.format.DateTimeFormat;
 import org.joda.time.format.DateTimeFormatter;
 import org.jsoup.Jsoup;
-import play.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import play.data.DynamicForm;
 import play.i18n.Lang;
 import play.i18n.MessagesApi;
@@ -114,18 +115,18 @@ public class ReviewController extends BaseController {
     @Inject
     protected MessagesApi messaging;
 
-    private static final Logger.ALogger logger = Logger.of(ReviewController.class);
+    private final Logger logger = LoggerFactory.getLogger(ReviewController.class);
 
     @Authenticated
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     @Anonymous(filteredProperties = { "user", "preEnrolledUserEmail", "grade" })
     public Result getParticipationsForExamAndUser(Long eid, Http.Request request) {
-        final Exam exam = Ebean.find(Exam.class, eid);
+        final Exam exam = DB.find(Exam.class, eid);
         if (exam == null) {
             return notFound();
         }
 
-        List<ExamParticipation> participations = Ebean
+        List<ExamParticipation> participations = DB
             .find(ExamParticipation.class)
             .fetch("exam", "id, state, anonymous")
             .fetch("exam.grade", "id, name")
@@ -146,11 +147,11 @@ public class ReviewController extends BaseController {
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     @Anonymous(filteredProperties = { "user", "preEnrolledUserEmail" })
     public Result listNoShowsForExamAndUser(Long eid, Http.Request request) {
-        final Exam exam = Ebean.find(Exam.class, eid);
+        final Exam exam = DB.find(Exam.class, eid);
         if (exam == null) {
             return notFound();
         }
-        List<ExamEnrolment> enrolments = Ebean
+        List<ExamEnrolment> enrolments = DB
             .find(ExamEnrolment.class)
             .fetch("reservation", "startAt, endAt")
             .fetch("examinationEventConfiguration.examinationEvent", "start")
@@ -227,7 +228,7 @@ public class ReviewController extends BaseController {
             "examEnrolments(retrialPermitted)" +
             ")"
         );
-        Query<Exam> query = Ebean.find(Exam.class);
+        Query<Exam> query = DB.find(Exam.class);
         pp.apply(query);
         query
             .fetchQuery("course", "code, credits")
@@ -278,7 +279,7 @@ public class ReviewController extends BaseController {
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result scoreExamQuestion(Long id, Http.Request request) {
         DynamicForm df = formFactory.form().bindFromRequest(request);
-        ExamSectionQuestion essayQuestion = Ebean.find(ExamSectionQuestion.class, id);
+        ExamSectionQuestion essayQuestion = DB.find(ExamSectionQuestion.class, id);
         if (essayQuestion == null) {
             return notFound("question not found");
         }
@@ -301,7 +302,7 @@ public class ReviewController extends BaseController {
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result forceScoreExamQuestion(Long id, Http.Request request) {
         DynamicForm df = formFactory.form().bindFromRequest(request);
-        Optional<ExamSectionQuestion> oeq = Ebean
+        Optional<ExamSectionQuestion> oeq = DB
             .find(ExamSectionQuestion.class)
             .fetch("examSection.exam.parent.examOwners")
             .where()
@@ -335,7 +336,7 @@ public class ReviewController extends BaseController {
     @Restrict({ @Group("TEACHER") })
     public Result updateAssessmentInfo(Long id, Http.Request request) {
         String info = request.body().asJson().get("assessmentInfo").asText();
-        Optional<Exam> option = Ebean
+        Optional<Exam> option = DB
             .find(Exam.class)
             .fetch("parent.creator")
             .where()
@@ -362,7 +363,7 @@ public class ReviewController extends BaseController {
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result reviewExam(Long id, Http.Request request) {
         DynamicForm df = formFactory.form().bindFromRequest(request);
-        Exam exam = Ebean.find(Exam.class).fetch("parent").fetch("parent.creator").where().idEq(id).findOne();
+        Exam exam = DB.find(Exam.class).fetch("parent").fetch("parent.creator").where().idEq(id).findOne();
         if (exam == null) {
             return notFound("sitnet_exam_not_found");
         }
@@ -382,7 +383,7 @@ public class ReviewController extends BaseController {
         Integer grade = df.get("grade") == null ? null : Integer.parseInt(df.get("grade"));
         String additionalInfo = df.get("additionalInfo");
         if (grade != null) {
-            Grade examGrade = Ebean.find(Grade.class, grade);
+            Grade examGrade = DB.find(Grade.class, grade);
             GradeScale scale = exam.getGradeScale() == null ? exam.getCourse().getGradeScale() : exam.getGradeScale();
             if (scale.getGrades().contains(examGrade)) {
                 exam.setGrade(examGrade);
@@ -401,7 +402,7 @@ public class ReviewController extends BaseController {
             creditType = df.get("creditType");
         }
         if (creditType != null) {
-            ExamType eType = Ebean.find(ExamType.class).where().eq("type", creditType).findOne();
+            ExamType eType = DB.find(ExamType.class).where().eq("type", creditType).findOne();
             if (eType != null) {
                 exam.setCreditType(eType);
             }
@@ -422,7 +423,7 @@ public class ReviewController extends BaseController {
     @Authenticated
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result sendInspectionMessage(Long eid, Http.Request request) {
-        Exam exam = Ebean.find(Exam.class, eid);
+        Exam exam = DB.find(Exam.class, eid);
         if (exam == null) {
             return notFound("sitnet_error_exam_not_found");
         }
@@ -432,7 +433,7 @@ public class ReviewController extends BaseController {
         }
         User loggedUser = request.attrs().get(Attrs.AUTHENTICATED_USER);
 
-        List<ExamInspection> inspections = Ebean
+        List<ExamInspection> inspections = DB
             .find(ExamInspection.class)
             .fetch("user")
             .fetch("exam")
@@ -465,7 +466,7 @@ public class ReviewController extends BaseController {
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     @Anonymous(filteredProperties = { "user" })
     public Result listNoShows(Long eid, Http.Request request) {
-        List<ExamEnrolment> enrolments = Ebean
+        List<ExamEnrolment> enrolments = DB
             .find(ExamEnrolment.class)
             .fetch("exam", "id, name, state, gradedTime, customCredit, trialCount, anonymous")
             .fetch("exam.executionType")
@@ -495,7 +496,7 @@ public class ReviewController extends BaseController {
     @With(CommentSanitizer.class)
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result updateComment(Long eid, Http.Request request) {
-        Exam exam = Ebean.find(Exam.class, eid);
+        Exam exam = DB.find(Exam.class, eid);
         if (exam == null) {
             return notFound("sitnet_error_exam_not_found");
         }
@@ -506,7 +507,7 @@ public class ReviewController extends BaseController {
         Optional<Long> commentId = request.attrs().getOptional(Attrs.COMMENT_ID);
         Comment comment = commentId.isEmpty()
             ? new Comment()
-            : Ebean.find(Comment.class).fetch("creator", "firstName, lastName").where().idEq(commentId.get()).findOne();
+            : DB.find(Comment.class).fetch("creator", "firstName, lastName").where().idEq(commentId.get()).findOne();
         if (comment == null) {
             return notFound();
         }
@@ -531,14 +532,14 @@ public class ReviewController extends BaseController {
     @With(CommentSanitizer.class)
     @Restrict({ @Group("STUDENT") })
     public Result setCommentStatusRead(Long eid, Long cid, Http.Request request) {
-        Exam exam = Ebean.find(Exam.class, eid);
+        Exam exam = DB.find(Exam.class, eid);
         if (exam == null) {
             return notFound("sitnet_error_exam_not_found");
         }
         if (exam.hasState(Exam.State.ABORTED, Exam.State.ARCHIVED)) {
             return forbidden();
         }
-        Comment comment = Ebean.find(Comment.class, cid);
+        Comment comment = DB.find(Comment.class, cid);
         if (comment == null) {
             return notFound();
         }
@@ -555,7 +556,7 @@ public class ReviewController extends BaseController {
     @With(CommentSanitizer.class)
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
     public Result addInspectionComment(Long id, Http.Request request) {
-        Exam exam = Ebean.find(Exam.class, id);
+        Exam exam = DB.find(Exam.class, id);
         if (exam == null) {
             return notFound("Inspection not found");
         }
@@ -573,7 +574,7 @@ public class ReviewController extends BaseController {
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
     public Result archiveExams(Http.Request request) {
         Collection<Long> ids = request.attrs().get(Attrs.ID_COLLECTION);
-        List<Exam> exams = Ebean.find(Exam.class).where().eq("state", Exam.State.GRADED_LOGGED).idIn(ids).findList();
+        List<Exam> exams = DB.find(Exam.class).where().eq("state", Exam.State.GRADED_LOGGED).idIn(ids).findList();
         for (Exam e : exams) {
             e.setState(Exam.State.ARCHIVED);
             e.update();
@@ -586,7 +587,7 @@ public class ReviewController extends BaseController {
         // if no assessments => everything
         // if assessments and type == locked => none
         // else date only
-        Set<Exam> assessments = Ebean
+        Set<Exam> assessments = DB
             .find(Exam.class)
             .where()
             .eq("parent.id", eid)
@@ -596,7 +597,7 @@ public class ReviewController extends BaseController {
         if (assessments.isEmpty()) {
             return ok(Json.newObject().put("status", "everything"));
         } else {
-            Exam exam = Ebean.find(Exam.class, eid);
+            Exam exam = DB.find(Exam.class, eid);
             if (
                 exam != null &&
                 exam.getExamFeedbackConfig() != null &&
@@ -660,7 +661,7 @@ public class ReviewController extends BaseController {
             .getChildren()
             .stream()
             .filter(e -> isEligibleForArchiving(e, start, end))
-            .collect(Collectors.toList());
+            .toList();
         Map<Long, String> questions = new LinkedHashMap<>();
         for (Exam exam : children) {
             String uid = String.format(
@@ -675,7 +676,7 @@ public class ReviewController extends BaseController {
                     .getSectionQuestions()
                     .stream()
                     .filter(esq -> esq.getQuestion().getType() == Question.Type.EssayQuestion)
-                    .collect(Collectors.toList());
+                    .toList();
                 for (ExamSectionQuestion esq : essays) {
                     Long questionId = esq.getQuestion().getParent() == null
                         ? esq.getQuestion().getId()
@@ -734,8 +735,7 @@ public class ReviewController extends BaseController {
         try {
             csvBuilder.parseGrades(file, user, isAdmin ? Role.Name.ADMIN : Role.Name.TEACHER);
         } catch (Exception e) {
-            logger.error("Failed to parse CSV file. Stack trace follows");
-            e.printStackTrace();
+            logger.error("Failed to parse CSV file. Stack trace follows", e);
             return internalServerError("sitnet_internal_error");
         }
         return ok();
@@ -743,7 +743,7 @@ public class ReviewController extends BaseController {
 
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
     public Result getArchivedAttachments(Long eid, Optional<String> start, Optional<String> end) throws IOException {
-        Exam prototype = Ebean.find(Exam.class, eid);
+        Exam prototype = DB.find(Exam.class, eid);
         if (prototype == null) {
             return notFound();
         }
@@ -838,7 +838,7 @@ public class ReviewController extends BaseController {
     }
 
     private static Query<ExamParticipation> createQuery() {
-        return Ebean
+        return DB
             .find(ExamParticipation.class)
             .fetch(
                 "exam",
@@ -847,12 +847,12 @@ public class ReviewController extends BaseController {
             .fetch("exam.course")
             .fetch("exam.course.organisation")
             .fetch("exam.course.gradeScale")
-            .fetch("exam.course.gradeScale.grades", new FetchConfig().query())
+            .fetch("exam.course.gradeScale.grades", FetchConfig.ofQuery())
             .fetch("exam.parent")
             .fetch("exam.parent.creator")
             .fetch("exam.parent.gradeScale")
-            .fetch("exam.parent.gradeScale.grades", new FetchConfig().query())
-            .fetch("exam.parent.examOwners", new FetchConfig().query())
+            .fetch("exam.parent.gradeScale.grades", FetchConfig.ofQuery())
+            .fetch("exam.parent.examOwners", FetchConfig.ofQuery())
             .fetch("exam.parent.examFeedbackConfig")
             .fetch("exam.examEnrolments")
             .fetch("exam.examEnrolments.reservation")
@@ -869,7 +869,7 @@ public class ReviewController extends BaseController {
             .fetch(
                 "exam.examSections.sectionQuestions",
                 "sequenceNumber, maxScore, answerInstructions, evaluationCriteria, expectedWordCount, evaluationType",
-                new FetchConfig().query()
+                FetchConfig.ofQuery()
             )
             .fetch("exam.examSections.sectionQuestions.question", "id, type, question, shared")
             .fetch("exam.examSections.sectionQuestions.question.attachment", "fileName")
